# email-automation-bot

./: .gitignore  README.md  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: attachment_service.rs  auth.rs  campaign_service.rs  contact_service.rs  database.rs  email_service.rs  encryption.rs  inbox_service.rs  lib.rs  main.rs  models.rs  scheduler.rs
src-tauri/templates/: auto_reply.html  welcome.html
src/components/: Header.tsx  NotificationBar.tsx  Sidebar.tsx
src/contexts/: ThemeContext.tsx
src/hooks/: index.ts  useAuth.ts  useEmailData.ts  useNotifications.ts
src/pages/: AttachmentsPage.tsx  AuthPage.tsx  AutomationRulesPage.tsx  CampaignsPage.tsx  ComposeEmailPage.tsx  ContactListsPage.css  ContactListsPage.tsx  DashboardPage.tsx  DocumentationPage.tsx  EmailAccountsPage.tsx  EmailTemplatesPage.tsx  InboxMonitorPage.css  InboxMonitorPage.tsx  index.ts
src/services/: templateService.ts
src/styles/: AttachmentsPage.css  CampaignsPage.css  ComposeEmailPage.css  DashboardPage.css  DocumentationPage.css  EmailAccountsPage.css  EmailTemplatesPage.css
src/types/: index.ts
