[package]
name = "email-automation-bot"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "email_automation_bot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
# sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Email handling
imap = "2.4"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder", "hostname", "pool"] }

# Authentication & Security
jsonwebtoken = "9.2"
bcrypt = "0.15"
argon2 = "0.5"
rand = "0.8"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Date/Time handling
chrono = { version = "0.4", features = ["serde"] }
cron = "0.12"

# Configuration
config = "0.14"
dotenv = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Template engine
tera = "1.19"

# File handling
csv = "1.3"
regex = "1.10"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# HTTP client for OAuth
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Encryption
aes-gcm = "0.10"
base64 = "0.22"
hex = "0.4"
native-tls = "0.2"

